# CSF-CLI

./: .gitignore  README.md
cli/: Cargo.toml
cli/src/: config.rs  http.rs  main.rs  repl.rs  table.rs
cli/src/nodes/: agent_metrics.rs  list.rs  metrics.rs  mod.rs
cli/src/registry/: agents.rs  bootstrap.rs  deregister.rs  mod.rs
cli/src/ssh/: connect.rs  mod.rs
cli/src/system/: mod.rs  releases.rs  stats.rs  update.rs
cli/src/tenant/: create_user.rs  delete_user.rs  get_user.rs  info.rs  list_roles.rs  list_users.rs  mod.rs  set_role.rs
cli/src/user/: login.rs  logout.rs  mod.rs  status.rs  token.rs
cli/src/workloads/: metrics.rs  mod.rs
