[package]
name = "csfx"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "csfx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
dirs = "5.0"
dialoguer = "0.11"
rsa = "0.9"
base64 = "0.21"
rand = "0.8"
sha2 = "0.10"
colored = "2.1"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
rustyline = { version = "14.0", features = ["derive"] }
ssh-key = { version = "0.6", features = ["ed25519", "rand_core"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
